--- a/app/views/addWatch.html
+++ b/app/views/addWatch.html
@@ -69,6 +69,15 @@
     </div>
 
     <div class="control-group">
+      <label class="control-label">Tweet</label>
+      <div class="controls">
+        <label class="checkbox inline">
+          <input type="checkbox" id="watchTweet" ng-model="tweet" value="tweet">
+        </label>
+      </div>
+    </div>
+
+    <div class="control-group">
       <div class="controls">
         <button type="submit" class="btn" ng-click="addWatch()">Add Crowd Watch</button>
       </div>
