--- a/app/views/main.html
+++ b/app/views/main.html
@@ -20,7 +20,7 @@
     </div>
     <div class="spots">
       <div class="spot food" ng-click="searchListings('Food')">
-        <img class="b4cm-icon" src="../images/b4cm-icon-food.png">
+        <img class="b4cm-icon" src="../images/food-icon.png">
         <h3>Food</h3>
         <div class="type-blurb">
           <h4>"Get a table</h4>
@@ -28,7 +28,7 @@
         </div>
       </div>
       <div class="spot study" ng-click="searchListings('Study')">
-        <img class="b4cm-icon" src="../images/b4cm-icon-study.png">
+        <img class="b4cm-icon" src="../images/study-icon.png">
         <h3>Study</h3>
         <div class="type-blurb">
           <h4>"Study or work</h4>
@@ -36,7 +36,7 @@
         </div>
       </div>
       <div class="spot social" ng-click="searchListings('Social')">
-        <img class="b4cm-icon" src="../images/b4cm-icon-social.png">
+        <img class="b4cm-icon" src="../images/social-icon.png">
         <h3>Social</h3>
         <div class="type-blurb">
           <h4>"Have a drink,</h4>
