Add new icons to listings page, both type and map.

--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -2,7 +2,7 @@
   <div class="title-bar clearfix">
     <div class="main-col">
       <div class="top">
-        <img class="b4cm-icon" ng-src="../images/b4cm-icon-{{listings.type | lowercase}}.png">
+        <img class="b4cm-icon" ng-src="../images/{{listings.type | lowercase}}-icon.png">
         <h2 class="listing-type">{{listings.type | uppercase}}</h2>
         <h3 class="listing-location">{{listings.displayAddress}}</h3>
       </div>
