Update nearby icons

--- a/app/views/spot.html
+++ b/app/views/spot.html
@@ -200,15 +200,15 @@
       <div class="find-nearby">
         <h3>Find Nearby:</h3>
         <div class="nearby-type" ng-click="findNearby('food')">
-          <img class="b4cm-icon" src="../images/b4cm-icon-food.png">
+          <img class="b4cm-icon" src="../images/food-icon.png">
           <h4>Food</h4>
         </div>
         <div class="nearby-type" ng-click="findNearby('study')">
-          <img class="b4cm-icon" src="../images/b4cm-icon-study.png">
+          <img class="b4cm-icon" src="../images/study-icon.png">
           <h4>Study</h4>
         </div>
         <div class="nearby-type" ng-click="findNearby('social')">
-          <img class="b4cm-icon" src="../images/b4cm-icon-social.png">
+          <img class="b4cm-icon" src="../images/social-icon.png">
           <h4>Social</h4>
         </div>
       </div>
