--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -381,8 +381,17 @@ input[type='text']:focus {
   color: $text-dark;
   padding: 0;
 
+  .logo-icon {
+    padding-right: 10px;
+    margin-top: 3px;
+  }
+
+  .logo-text {
+
+  }
+
   .brand {
-    margin: -25px 38px 0 -8px;
+    margin: -25px 25px 0 -8px;
   }
 
   .login > ul{
@@ -429,8 +438,8 @@ input[type='text']:focus {
 @media screen and (max-width: $break-small){
   .navbar-inner {
     width: 100%;
-    height: 110px;
-    text-align: left;
+    height: 60px;
+    text-align: center;
 
     .login {
       display: none;
@@ -445,17 +454,38 @@ input[type='text']:focus {
       //  margin: 45px auto 0 auto !important;
       //}
     }
+
     form {
       width: 100%
     }
+
     .brand {
-      width: 100%;
+      //width: 100%;
       margin-left: -16px;
       margin-bottom: 10px;
+      margin-right: 0;
+      padding-right: 0;
     }
+
+    .logo-text {
+      display: none;
+    }
+
+    .find-spot {
+      input {
+        width: 130px;
+        margin-left: 2px;
+      }
+      select {
+        width: 75px;
+        margin-left: 0px;
+      }
+    }
+
     .search-icon {
       display: inline-block;
     }
+
     .search-btn {
       display: none;
     }
