--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -437,6 +437,7 @@ input[type='text']:focus {
 
 @media screen and (max-width: $break-small){
   .navbar-inner {
+    //position: fixed;
     width: 100%;
     height: 60px;
     text-align: center;
