--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -39,7 +39,7 @@ $text-dark: #373737;
 $text-light: #fafafa;
 
 // Backgrounds:
-$page-color: #ffffff;
+$page-color: #f9f9f9;
 
 // NEW
 $blue-grey: #111144;
@@ -375,9 +375,9 @@ input[type='text']:focus {
   //background-color: $acc-dark !important;
   //background-image: linear-gradient(to bottom, $acc-dark, #7e7e7e) !important;
   background-color: #ffffff !important;
-  background-image: linear-gradient(to bottom, #ffffff, #eeeeee) !important;
+  background-image: linear-gradient(to bottom, #ffffff, #f9f9f9) !important;
   background-repeat: repeat-x;
-  border-color: #252525;
+  border-color: #c9c9c9;
   color: $text-dark;
   padding: 0;
 
@@ -1844,11 +1844,11 @@ input[type='text']:focus {
 }
 
 /******************
-*** Crowd Factor 
+*** Crowd Graph 
 *******************/
 .crowd-factor {
-  background-image: linear-gradient(to bottom, #eeeeee, #cccccc);
-  border: 2px solid #6E6E6E;
+  background-image: linear-gradient(to bottom, #fcfcfc, $page-color);
+  border: 2px solid #cccccc;
   border-radius: 10px 10px 10px 10px;
   box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
   margin: 20px auto;
