--- a/app/views/main.html
+++ b/app/views/main.html
@@ -33,7 +33,7 @@
 
   <div class="visualize">
     <div class="visualize-tagline">
-      <h3>It's like a <span class="emphasize"></span> weather app for crowds.</h3>
+      <h3>It's like a <span class="emphasize">weather app</span>, but for <span class="emphasize">crowds</span>.</h3>
     </div>
 
     <div class="crowd-factor">
