--- a/app/views/main.html
+++ b/app/views/main.html
@@ -35,9 +35,13 @@
     <div class="visualize-tagline">
       <h3>It's like a <span class="emphasize">weather app</span>, but for <span class="emphasize">crowds</span>.</h3>
     </div>
-
+    <div class="location-info">
+      <img class="location-image" src="../images/cream.jpg" height="75px" width="75px" alt="Cream Cookies">
+      <h3 class="location-name">Cream</h3>
+      <h4 class="location-place"> - Palo Alto, CA</h4>
+    </div>
     <div class="crowd-factor">
-      <h3 class="location-name">Cream</h3> <h4 class="location-place"> - Palo Alto, CA</h4>
+      <img class="current-time-marker" src="../images/star-icon.png"> 
       <h4 class="current-time">Current Time: <span class="time">Tuesday, 12pm</span></h4>
       <h5 class="watch-count">73 Watchers</h5>
       <button type="button" class="btn">Add Crowd Watch</button>
