--- a/app/views/home.html
+++ b/app/views/home.html
@@ -11,8 +11,9 @@
     </div>
     <div class="side-col">
       <div class="ad-book">
+        <h6 class="ad-label">Ad</h6>
         <a ng-href="http://www.amazon.com/gp/product/0140437649/ref=as_li_ss_tl?ie=UTF8&camp=1789&creative=390957&creativeASIN=0140437649&linkCode=as2&tag=coding4kicks-20">
-          <h6>The History of the Decline and Fall of the Roman Empire</h6>
+          <h6 class="description">The History of the Decline and Fall of the Roman Empire</h6>
           <img src="../images/books/historyofdeclineandfall.jpg">  
         </a>    
       </div>
