--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,6 +1,5 @@
 <div id="main-page">
   <div class="spot-types">
-    <br><br>
     <div class="spots">
       <div class="spot food" ng-click="searchListings('Food')">
         <img class="b4cm-icon" src="../images/food-icon.png">
@@ -47,7 +46,7 @@
       <button type="button" class="btn">Add Crowd Watch</button>
       <div class="crowd-visuals">
         <div class="timeslot">
-          <h5 class="block-day">afternoon</h5>
+          <h5 class="block-day">Afternoon</h5>
           <table class="afternoon-table">
             <tr>
               <th></th>
@@ -124,7 +123,7 @@
           </table>
         </div>
         <div class="timeslot">
-          <h5 class="block-day">evening</h5>
+          <h5 class="block-day">Evening</h5>
           <table class="evening-table">
             <tr>
               <th></th>
@@ -201,7 +200,7 @@
           </table>
         </div>
         <div class="timeslot">
-          <h5 class="block-day">latenight</h5>
+          <h5 class="block-day">Latenight</h5>
           <table class="latenight-table">
             <tr>
               <th></th>
