--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,12 +1,11 @@
-<div id="home-page">
+<div id="home-page" ng-class="initClass">
   <div class="title-bar clearfix">
     <div class="main-col">
       <div class="top">
-        <h2 class="listing-type">{{userName}}</h2>
+        <h3 class="listing-type"><span class="favit-text">Your Favits</span> {{userName}}</h3>
       </div>
       <div class="bottom">
         <h6 class="listing-nums" ng-hide="noSpots">{{startIndex}}-{{startIndex + spots.length - 1}} of {{numReturns}}</h6>
-        <h4 class="favorites-title" ng-hide="noSpots">Your Favorites</h4>
       </div>
     </div>
     <div class="side-col">
