--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -42,7 +42,7 @@ $text-light: #fafafa;
 $page-color: #f9f9f9;
 
 // NEW
-$blue-grey: #111144;
+$blue-grey: #5c6268;
 $logo-red: #b30000;
 $button-top: #ddddee;
 $button-bottom: #bbbbcc;
@@ -54,6 +54,8 @@ $hover-link: $logo-red;
 $ad-background: #ddd;
 $ad-text: #555;
 $ad-hover: $logo-red;
+$dark-grey: #1c2228;
+$hr-color: #e5e5e5;
 
 /******************
 *** OTHER VARIABLES
@@ -124,9 +126,11 @@ $break-small: 500px;
 *******************/
 
 body {
-  background-image:url('../images/wavegrid.png');
-  background-repeat:repeat;
+  //background-image:url('../images/wavegrid.png');
+  //background-repeat:repeat;
   color: #373737;
+  background-color: $dark-grey;
+  background-image: linear-gradient(90deg, $dark-grey, #fff 50%, $dark-grey);
 }
 
 // Responsive
@@ -138,7 +142,7 @@ body {
 }
 
 hr {
-  border: 1px solid $acc-light;
+  border: 1px solid $hr-color;
   margin: 0 auto;
   //width: $hr-width;
   width: $page-width;
@@ -226,7 +230,7 @@ a {
   @include ad-element;
   height: 110px;
   padding: 5px;
-  margin-left: 40px;
+  margin-left: 85px;
   text-align: center;
   width: 220px;
 
@@ -393,7 +397,7 @@ input[type='text']:focus {
     background-image: -webkit-linear-gradient(top, #ffffff, #f9f9f9);
     background-image: -o-linear-gradient(top, #ffffff, #f9f9f9);
     background-repeat: repeat-x;
-    border-bottom: 2px solid $acc-light;
+    border-bottom: 1px solid $hr-color;
     color: $text-dark;
     padding: 0;
     min-height: 78px;
@@ -414,8 +418,7 @@ input[type='text']:focus {
     }
   
     .login > ul{
-      //margin-top: -15px;
-      margin: -30px 0 10px 0;
+      margin: -15px 0 -5px 0;
     }
   
     .nav > li > a {
@@ -543,7 +546,7 @@ input[type='text']:focus {
     float: right;
     padding-top: -2px;
     vertical-align: top;
-    width: 187px;
+    width: 210px;
   }
 }
 
@@ -705,7 +708,7 @@ input[type='text']:focus {
     @include page-element;
 
     .visualize-tagline {
-      margin: 0 auto;
+      margin: -8px auto 35px auto;
     }
 
     h3 {
@@ -1946,10 +1949,10 @@ input[type='text']:focus {
 *** Crowd Graph 
 *******************/
 .crowd-factor {
-  background-image: linear-gradient(to bottom, #fcfcfc, $page-color);
-  border: 2px solid #cccccc;
-  border-radius: 10px 10px 10px 10px;
-  box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
+  //background-image: linear-gradient(to bottom, #fcfcfc, $page-color);
+  //border: 2px solid #cccccc;
+  //border-radius: 10px 10px 10px 10px;
+  //box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
   margin: 20px auto;
   padding: 10px;
   text-align: center;
